@@ -28,16 +28,16 @@
 
 package org.owasp.html;
 
-import com.google.common.collect.ImmutableList;
-
-import junit.framework.TestCase;
-
-import org.junit.Test;
-import org.junit.Before;
-import org.junit.Ignore;
-
 import static org.owasp.html.TagBalancingHtmlStreamEventReceiver
               .isInterElementWhitespace;
+
+import java.util.List;
+
+import org.junit.Before;
+import org.junit.Ignore;
+import org.junit.Test;
+
+import junit.framework.TestCase;
 
 
 @SuppressWarnings("javadoc")
@@ -60,17 +60,17 @@ public class TagBalancingHtmlStreamRendererTest extends TestCase {
   @Test
   public final void testTagBalancing() {
     balancer.openDocument();
-    balancer.openTag("html", ImmutableList.<String>of());
-    balancer.openTag("head", ImmutableList.<String>of());
-    balancer.openTag("title", ImmutableList.<String>of());
+	balancer.openTag("html", List.<String>of());
+	balancer.openTag("head", List.<String>of());
+	balancer.openTag("title", List.<String>of());
     balancer.text("Hello, <<World>>!");
     // TITLE closed with case-sensitively different name.
     balancer.closeTag("TITLE");
     balancer.closeTag("head");
-    balancer.openTag("body", ImmutableList.<String>of());
-    balancer.openTag("p", ImmutableList.of("id", "p'0"));
+	balancer.openTag("body", List.<String>of());
+	balancer.openTag("p", List.of("id", "p'0"));
     balancer.text("Hello,");
-    balancer.openTag("Br", ImmutableList.<String>of());
+	balancer.openTag("Br", List.<String>of());
     balancer.text("<<World>>!");
     // HTML, P, and BODY unclosed, but BR not.
     balancer.closeDocument();
@@ -85,9 +85,9 @@ public class TagBalancingHtmlStreamRendererTest extends TestCase {
   @Test
   public final void testTagSoupIronedOut() {
     balancer.openDocument();
-    balancer.openTag("i", ImmutableList.<String>of());
+	balancer.openTag("i", List.<String>of());
     balancer.text("x");
-    balancer.openTag("b", ImmutableList.<String>of());
+	balancer.openTag("b", List.<String>of());
     balancer.text("y");
     balancer.closeTag("i");
     balancer.text("z");
@@ -101,12 +101,12 @@ public class TagBalancingHtmlStreamRendererTest extends TestCase {
   @Test
   public final void testListInListDirectly() {
     balancer.openDocument();
-    balancer.openTag("ul", ImmutableList.<String>of());
-    balancer.openTag("li", ImmutableList.<String>of());
+	balancer.openTag("ul", List.<String>of());
+	balancer.openTag("li", List.<String>of());
     balancer.text("foo");
     balancer.closeTag("li");
-    balancer.openTag("ul", ImmutableList.<String>of());
-    balancer.openTag("li", ImmutableList.<String>of());
+	balancer.openTag("ul", List.<String>of());
+	balancer.openTag("li", List.<String>of());
     balancer.text("bar");
     balancer.closeTag("li");
     balancer.closeTag("ul");
@@ -121,28 +121,28 @@ public class TagBalancingHtmlStreamRendererTest extends TestCase {
   @Test
   public final void testTextContent() {
     balancer.openDocument();
-    balancer.openTag("title", ImmutableList.<String>of());
+	balancer.openTag("title", List.<String>of());
     balancer.text("Hello, World!");
     balancer.closeTag("title");
     balancer.text("Hello, ");
-    balancer.openTag("b", ImmutableList.<String>of());
+	balancer.openTag("b", List.<String>of());
     balancer.text("World!");
     balancer.closeTag("b");
-    balancer.openTag("p", ImmutableList.<String>of());
+	balancer.openTag("p", List.<String>of());
     balancer.text("Hello, ");
-    balancer.openTag("textarea", ImmutableList.<String>of());
+	balancer.openTag("textarea", List.<String>of());
     balancer.text("World!");
     balancer.closeTag("textarea");
     balancer.closeTag("p");
-    balancer.openTag("h1", ImmutableList.<String>of());
+	balancer.openTag("h1", List.<String>of());
     balancer.text("Hello");
-    balancer.openTag("style", ImmutableList.<String>of("type", "text/css"));
+	balancer.openTag("style", List.<String>of("type", "text/css"));
     balancer.text("\n.World {\n  color: blue\n}\n");
     balancer.closeTag("style");
     balancer.closeTag("h1");
-    balancer.openTag("ul", ImmutableList.<String>of());
+	balancer.openTag("ul", List.<String>of());
     balancer.text("\n  ");
-    balancer.openTag("li", ImmutableList.<String>of());
+	balancer.openTag("li", List.<String>of());
     balancer.text("Hello,");
     balancer.closeTag("li");
     balancer.text("\n  ");
@@ -170,20 +170,20 @@ public class TagBalancingHtmlStreamRendererTest extends TestCase {
   @Test
   public final void testMismatchedHeaders() {
     balancer.openDocument();
-    balancer.openTag("H1", ImmutableList.<String>of());
+	balancer.openTag("H1", List.<String>of());
     balancer.text("header");
     balancer.closeTag("h1");
     balancer.text("body");
-    balancer.openTag("H2", ImmutableList.<String>of());
+	balancer.openTag("H2", List.<String>of());
     balancer.text("sub-header");
     balancer.closeTag("h3");
     balancer.text("sub-body");
-    balancer.openTag("h3", ImmutableList.<String>of());
+	balancer.openTag("h3", List.<String>of());
     balancer.text("sub-sub-");
     balancer.closeTag("hr"); // hr is not a header tag so does not close an h3.
     balancer.text("header");
     // <h3> is not allowed in h3.
-    balancer.openTag("h3", ImmutableList.<String>of());
+	balancer.openTag("h3", List.<String>of());
     balancer.closeTag("h3");
     balancer.text("sub-sub-body");
     balancer.closeTag("H4");
@@ -201,10 +201,10 @@ public class TagBalancingHtmlStreamRendererTest extends TestCase {
   @Test
   public final void testListNesting() {
     balancer.openDocument();
-    balancer.openTag("ul", ImmutableList.<String>of());
-    balancer.openTag("li", ImmutableList.<String>of());
-    balancer.openTag("ul", ImmutableList.<String>of());
-    balancer.openTag("li", ImmutableList.<String>of());
+	balancer.openTag("ul", List.<String>of());
+	balancer.openTag("li", List.<String>of());
+	balancer.openTag("ul", List.<String>of());
+	balancer.openTag("li", List.<String>of());
     balancer.text("foo");
     balancer.closeTag("li");
     // Does not closes the second <ul> since only </ol> and </ul> can close a
@@ -212,8 +212,8 @@ public class TagBalancingHtmlStreamRendererTest extends TestCase {
     // tree building algo.
     balancer.closeTag("li");
     // This would append inside a list, not an item.  We insert an <li>.
-    balancer.openTag("ul", ImmutableList.<String>of());
-    balancer.openTag("li", ImmutableList.<String>of());
+	balancer.openTag("ul", List.<String>of());
+	balancer.openTag("li", List.<String>of());
     balancer.text("bar");
     balancer.closeDocument();
 
@@ -225,18 +225,18 @@ public class TagBalancingHtmlStreamRendererTest extends TestCase {
   @Test
   public final void testTableNesting() {
     balancer.openDocument();
-    balancer.openTag("table", ImmutableList.<String>of());
-    balancer.openTag("tbody", ImmutableList.<String>of());
-    balancer.openTag("tr", ImmutableList.<String>of());
-    balancer.openTag("td", ImmutableList.<String>of());
+	balancer.openTag("table", List.<String>of());
+	balancer.openTag("tbody", List.<String>of());
+	balancer.openTag("tr", List.<String>of());
+	balancer.openTag("td", List.<String>of());
     balancer.text("foo");
     balancer.closeTag("td");
     // Chrome does not insert a td to contain this mis-nested table.
     // Instead, it ends one table and starts another.
-    balancer.openTag("table", ImmutableList.<String>of());
-    balancer.openTag("tbody", ImmutableList.<String>of());
-    balancer.openTag("tr", ImmutableList.<String>of());
-    balancer.openTag("th", ImmutableList.<String>of());
+	balancer.openTag("table", List.<String>of());
+	balancer.openTag("tbody", List.<String>of());
+	balancer.openTag("tr", List.<String>of());
+	balancer.openTag("th", List.<String>of());
     balancer.text("bar");
     balancer.closeTag("table");
     balancer.closeTag("table");
@@ -257,7 +257,7 @@ public class TagBalancingHtmlStreamRendererTest extends TestCase {
 
     balancer.setNestingLimit(10);
     balancer.openDocument();
-    ImmutableList<String> attrs = ImmutableList.<String>of();
+	List<String> attrs = List.<String>of();
     for (int i = 20000; --i >= 0;) {
       balancer.openTag("div", attrs);
     }
@@ -273,29 +273,29 @@ public class TagBalancingHtmlStreamRendererTest extends TestCase {
   public final void testTablesGuarded() {
     // Derived from issue 12.
     balancer.openDocument();
-    balancer.openTag("html", ImmutableList.<String>of());
-    balancer.openTag("head", ImmutableList.<String>of());
-    balancer.openTag("meta", ImmutableList.<String>of());
+	balancer.openTag("html", List.<String>of());
+	balancer.openTag("head", List.<String>of());
+	balancer.openTag("meta", List.<String>of());
     balancer.closeTag("head");
-    balancer.openTag("body", ImmutableList.<String>of());
-    balancer.openTag("p", ImmutableList.<String>of());
+	balancer.openTag("body", List.<String>of());
+	balancer.openTag("p", List.<String>of());
     balancer.text("Hi");
     balancer.closeTag("p");
-    balancer.openTag("p", ImmutableList.<String>of());
+	balancer.openTag("p", List.<String>of());
     balancer.text("How are you");
     balancer.closeTag("p");
     balancer.text("\n");
-    balancer.openTag("ul", ImmutableList.<String>of());
-    balancer.openTag("li", ImmutableList.<String>of());
-    balancer.openTag("table", ImmutableList.<String>of());
-    balancer.openTag("tbody", ImmutableList.<String>of());
-    balancer.openTag("tr", ImmutableList.<String>of());
+	balancer.openTag("ul", List.<String>of());
+	balancer.openTag("li", List.<String>of());
+	balancer.openTag("table", List.<String>of());
+	balancer.openTag("tbody", List.<String>of());
+	balancer.openTag("tr", List.<String>of());
     for (int i = 2; --i >= 0;) {
-      balancer.openTag("td", ImmutableList.<String>of());
-      balancer.openTag("b", ImmutableList.<String>of());
-      balancer.openTag("font", ImmutableList.<String>of());
-      balancer.openTag("font", ImmutableList.<String>of());
-      balancer.openTag("p", ImmutableList.<String>of());
+		balancer.openTag("td", List.<String>of());
+		balancer.openTag("b", List.<String>of());
+		balancer.openTag("font", List.<String>of());
+		balancer.openTag("font", List.<String>of());
+		balancer.openTag("p", List.<String>of());
       balancer.text("Cell");
       balancer.closeTag("p");
       balancer.closeTag("font");
@@ -309,7 +309,7 @@ public class TagBalancingHtmlStreamRendererTest extends TestCase {
     balancer.closeTag("table");
     balancer.closeTag("ul");
     balancer.text("\n");
-    balancer.openTag("p", ImmutableList.<String>of());
+	balancer.openTag("p", List.<String>of());
     balancer.text("x");
     balancer.closeTag("p");
     balancer.closeTag("body");
@@ -348,11 +348,11 @@ public class TagBalancingHtmlStreamRendererTest extends TestCase {
 
   @Test
   public final void testAnchorTransparentToBlock() {
-    ImmutableList<String> hrefOnly = ImmutableList.of("href", "");
+		List<String> hrefOnly = List.of("href", "");
     balancer.openDocument();
-    balancer.openTag("div", ImmutableList.<String>of());
+		balancer.openTag("div", List.<String>of());
     balancer.openTag("a", hrefOnly);
-    balancer.openTag("div", ImmutableList.<String>of());
+		balancer.openTag("div", List.<String>of());
     balancer.text("...");
     balancer.closeTag("div");
     balancer.closeTag("a");
@@ -367,11 +367,11 @@ public class TagBalancingHtmlStreamRendererTest extends TestCase {
 
   @Test
   public final void testAnchorTransparentToSpans() {
-    ImmutableList<String> hrefOnly = ImmutableList.of("href", "");
+		List<String> hrefOnly = List.of("href", "");
     balancer.openDocument();
-    balancer.openTag("span", ImmutableList.<String>of());
+		balancer.openTag("span", List.<String>of());
     balancer.openTag("a", hrefOnly);
-    balancer.openTag("span", ImmutableList.<String>of());
+		balancer.openTag("span", List.<String>of());
     balancer.text("...");
     balancer.closeTag("span");
     balancer.closeTag("a");
@@ -386,11 +386,11 @@ public class TagBalancingHtmlStreamRendererTest extends TestCase {
 
   @Test
   public final void testAnchorWithInlineInBlock() {
-    ImmutableList<String> hrefOnly = ImmutableList.of("href", "");
+		List<String> hrefOnly = List.of("href", "");
     balancer.openDocument();
-    balancer.openTag("div", ImmutableList.<String>of());
+		balancer.openTag("div", List.<String>of());
     balancer.openTag("a", hrefOnly);
-    balancer.openTag("span", ImmutableList.<String>of());
+		balancer.openTag("span", List.<String>of());
     balancer.text("...");
     balancer.closeTag("span");
     balancer.closeTag("a");
@@ -404,9 +404,9 @@ public class TagBalancingHtmlStreamRendererTest extends TestCase {
 
   @Test
   public final void testDirectlyNestedAnchor() {
-    ImmutableList<String> hrefOnly = ImmutableList.of("href", "");
+		List<String> hrefOnly = List.of("href", "");
     balancer.openDocument();
-    balancer.openTag("span", ImmutableList.<String>of());
+		balancer.openTag("span", List.<String>of());
     balancer.openTag("a", hrefOnly);
     balancer.openTag("a", hrefOnly);
     balancer.text("...");
@@ -423,11 +423,11 @@ public class TagBalancingHtmlStreamRendererTest extends TestCase {
 
   @Test
   public final void testAnchorClosedWhenBlockInInline() {
-    ImmutableList<String> hrefOnly = ImmutableList.of("href", "");
+		List<String> hrefOnly = List.of("href", "");
     balancer.openDocument();
-    balancer.openTag("span", ImmutableList.<String>of());
+		balancer.openTag("span", List.<String>of());
     balancer.openTag("a", hrefOnly);
-    balancer.openTag("div", ImmutableList.<String>of());
+		balancer.openTag("div", List.<String>of());
     balancer.text("...");
     balancer.closeTag("div");
     balancer.closeTag("a");
@@ -446,11 +446,11 @@ public class TagBalancingHtmlStreamRendererTest extends TestCase {
   @Test
   @Ignore
   public final void failingtestAnchorInAnchorIndirectly() {
-    ImmutableList<String> hrefOnly = ImmutableList.of("href", "");
+		List<String> hrefOnly = List.of("href", "");
     balancer.openDocument();
-    balancer.openTag("div", ImmutableList.<String>of());
+		balancer.openTag("div", List.<String>of());
     balancer.openTag("a", hrefOnly);
-    balancer.openTag("div", ImmutableList.<String>of());
+		balancer.openTag("div", List.<String>of());
     balancer.openTag("a", hrefOnly);
     balancer.text("...");
     balancer.closeTag("a");
@@ -466,12 +466,12 @@ public class TagBalancingHtmlStreamRendererTest extends TestCase {
 
   @Test
   public final void testInteractiveInAnchorIndirectly() {
-    ImmutableList<String> hrefOnly = ImmutableList.of("href", "");
+		List<String> hrefOnly = List.of("href", "");
     balancer.openDocument();
-    balancer.openTag("div", ImmutableList.<String>of());
+		balancer.openTag("div", List.<String>of());
     balancer.openTag("a", hrefOnly);
-    balancer.openTag("div", ImmutableList.<String>of());
-    balancer.openTag("video", ImmutableList.<String>of());
+		balancer.openTag("div", List.<String>of());
+		balancer.openTag("video", List.<String>of());
     balancer.closeTag("video");
     balancer.closeTag("div");
     balancer.closeTag("a");
@@ -484,10 +484,10 @@ public class TagBalancingHtmlStreamRendererTest extends TestCase {
 
   @Test
   public final void testAnchorWithBlockAtTopLevel() {
-    ImmutableList<String> hrefOnly = ImmutableList.of("href", "");
+		List<String> hrefOnly = List.of("href", "");
     balancer.openDocument();
     balancer.openTag("a", hrefOnly);
-    balancer.openTag("div", ImmutableList.<String>of());
+	balancer.openTag("div", List.<String>of());
     balancer.text("...");
     balancer.closeTag("div");
     balancer.closeTag("a");
@@ -500,11 +500,11 @@ public class TagBalancingHtmlStreamRendererTest extends TestCase {
   @Test
   public final void testResumedElementsAllowedWhereResumed() {
     balancer.openDocument();
-    balancer.openTag("a", ImmutableList.<String>of());
-    balancer.openTag("b", ImmutableList.<String>of());
+	balancer.openTag("a", List.<String>of());
+	balancer.openTag("b", List.<String>of());
     balancer.text("foo");
-    balancer.openTag("i", ImmutableList.<String>of());
-    balancer.openTag("a", ImmutableList.<String>of());
+	balancer.openTag("i", List.<String>of());
+	balancer.openTag("a", List.<String>of());
     balancer.text("bar");
     balancer.closeTag("a");
     balancer.closeTag("i");
@@ -520,11 +520,11 @@ public class TagBalancingHtmlStreamRendererTest extends TestCase {
   public final void testMenuItemNesting() {
     // issue 96
     balancer.openDocument();
-    balancer.openTag("div", ImmutableList.<String>of());
-    balancer.openTag("menu", ImmutableList.<String>of());
-    balancer.openTag("menuitem", ImmutableList.<String>of());
+	balancer.openTag("div", List.<String>of());
+	balancer.openTag("menu", List.<String>of());
+	balancer.openTag("menuitem", List.<String>of());
     balancer.closeTag("menuitem");
-    balancer.openTag("menuitem", ImmutableList.<String>of());
+	balancer.openTag("menuitem", List.<String>of());
     balancer.closeTag("menuitem");
     balancer.closeTag("menu");
     balancer.closeTag("div");
